part1/random-string-generator/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomstringgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomstringgenerator
  template:
    metadata:
      labels:
        app: randomstringgenerator
    spec:
      containers:
        - name: randomstringgenerator
          image: dareedyone/random-string-generator
