part1/random-string-generator/manifests/serviceci.yaml
apiVersion: v1
kind: Service
metadata:
  name: randomstringgen-svc
spec:
  type: ClusterIP
  selector:
    app: randomstringgenerator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
