part1/random-string-generator/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: randomstringgen-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: randomstringgen-svc
              servicePort: 2345
